# hood-link

./: .gitignore  .mise.toml  LICENSE  Makefile  README.md  install.ps1  install.sh
.github/workflows/: release.yml
extension/: manifest.json  package.json
extension/src/: background.js  content.js  inject.js
extension/src/popup/: popup.html  popup.js
server/: pyproject.toml
server/hoodlink/: __main__.py  auth.py  bridge.py  config.py  main.py  models.py  ui.html
server/hoodlink/routes/: account.py  market.py  trading.py
server/hoodlink/ws/: client.py  robinhood.py  stream.py
